# git-finder

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_GUIDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  README.md  TESTING.md  pyproject.toml  requirements-dev.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  lint.yml  release.yml
docs/: INSTALL.md  QUICKSTART.md
git_finder/: __init__.py  cli.py  core.py
scripts/: install.bat  install.sh  test_install.py  test_local.py
tests/: __init__.py  test_cli.py  test_core.py
