[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "git-finder"
version = "1.0.0"
description = "Show today's commits from all Git projects in a directory tree"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["git", "commits", "finder", "projects", "repository"]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.scripts]
git-finder = "git_finder.cli:main"
gf = "git_finder.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/git-finder"
"Bug Tracker" = "https://github.com/yourusername/git-finder/issues"
