[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "git-finder"
version = "1.0.0"
description = "Show today's commits from all Git projects in a directory tree"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["git", "commits", "finder", "projects", "repository"]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.scripts]
git-finder = "git_finder.cli:main"
gf = "git_finder.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/git-finder"
"Bug Tracker" = "https://github.com/yourusername/git-finder/issues"

[tool.ruff]
# Target version for Python
target-version = "py39"
line-length = 127

[tool.ruff.lint]
# Enable various rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "PL",  # pylint
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "PTH", # flake8-use-pathlib
    "ARG", # flake8-unused-arguments
    "DTZ", # flake8-datetimez
    "RET", # flake8-return
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501", # line too long (handled by formatter)
    "PLR2004", # magic value used in comparison
]

[tool.ruff.lint.isort]
known-first-party = ["git_finder"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unreachable = true
pretty = true
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"] # Skip B101 (assert used) as it's common in this project
